# OGLLearning

./: .gitignore
resources/shaders/: simple-vs.txt
src/: CMakeLists.txt  main.cpp
src/framework/: CMakeLists.txt
src/framework/commom/: resource_manager.hpp  resource_manager.hpp~RF1996a7d.TMP  resource_manager.hpp~RF19b9b3d.TMP
src/framework/graphics/: 3d_model.hpp  buffer._object.cpp  buffer_object.cpp  buffer_object.hpp  dds_loader.cpp  dds_loader.hpp  definitions.hpp  enums.hpp  model_loader.cpp  model_loader.hpp  obj_loader.cpp  obj_loader.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  skn_loader.cpp  skn_loader.hpp  sprite_batch.cpp  sprite_batch.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  vertices.hpp  vetex_array.hpp
src/framework/sdl/: definitions.hpp  events.hpp  sdl_app.cpp  sdl_app.hpp  sdl_error.hpp  sdl_message_box.cpp  sdl_message_box.hpp  sdl_window.cpp  sdl_window.hpp
src/framework/third/: lodepng.cpp  lodepng.hpp
src/framework/ui/: box.hpp  container.cpp  container.hpp  definitions.hpp  drawer.hpp  events.hpp  position.hpp  rectangle.hpp  sdl_app.cpp  sdl_app.hpp  sdl_error.hpp  sdl_message_box.cpp  sdl_message_box.hpp  sdl_window.cpp  sdl_window.hpp  widget.cpp  widget.hpp
src/framework/utils/: binary_reader.hpp  color.hpp  matrix.cpp  matrix.hpp  point.hpp  pointer_allocator.hpp  rect.hpp  size.hpp  string.cpp  string.hpp  vector.hpp
src/game/: game.cpp  game.hpp  game_window.cpp  game_window.hpp  main.cpp  scene.hpp  test_scene.hpp
src/projects/: CMakeLists.txt
src/projects/intro_concepts/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/utils/: fps_counter.hpp
tests/: matrix.cpp
tests/widgets/: CMakeLists.txt  main.cpp  sdl_box.cpp  sdl_box.hpp
